k8s/helm-chart-output.yaml
---
# Source: cpapp-kyma/charts/srv/templates/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cpapp-srv
  labels:
    helm.sh/revision: "1"
    helm.sh/chart: srv-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: srv
    app.kubernetes.io/instance: cpapp
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: istio-ingressgateway
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: srv
      app.kubernetes.io/instance: cpapp
---
# Source: cpapp-kyma/charts/srv/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpapp-srv
  labels:
    helm.sh/revision: "1"
    helm.sh/chart: srv-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: srv
    app.kubernetes.io/instance: cpapp
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: srv
    app.kubernetes.io/instance: cpapp
---
# Source: cpapp-kyma/charts/srv/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/revision: "1"
    helm.sh/chart: srv-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: srv
    app.kubernetes.io/instance: cpapp
  name: cpapp-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: srv
      app.kubernetes.io/instance: cpapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: srv
        app.kubernetes.io/instance: cpapp
      annotations:
        container.apparmor.security.beta.kubernetes.io/srv: runtime/default
    spec:
      imagePullSecrets:
        - name: container-registry
      automountServiceAccountToken: false
      serviceAccountName: cpapp-srv
      containers:
      - image: dewdale/cpapp-kyma-srv:latest
        name: srv
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        startupProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 15
          periodSeconds: 2
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: bindings-root
          mountPath: /bindings
        
        - mountPath: /bindings/auth/
          name: "auth"
          readOnly: true
        - mountPath: /bindings/db/
          name: "db"
          readOnly: true
        resources:
          limits:
            ephemeral-storage: 1G
            memory: 500M
          requests:
            cpu: 500m
            ephemeral-storage: 1G
            memory: 500M
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/name: srv
            app.kubernetes.io/instance: cpapp
        maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
      - labelSelector:
          matchLabels:
            app.kubernetes.io/name: srv
            app.kubernetes.io/instance: cpapp
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: bindings-root
      
      - name: auth
        secret:
          secretName: cpapp-srv-auth
      - name: db
        secret:
          secretName: cpapp-schema-binding
